Successfully exchange auth code for access and refresh tokens. Store these locally.

--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,9 @@
     "host_permissions": ["https://rest.tsheets.com/api/*"],
     "action": {
       "default_popup": "popup/popup.html"
+    },
+    "background": {
+      "service_worker": "background/auth.js"
     }
   }
   
