--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
       "default_popup": "popup/popup.html"
     },
     "background": {
-      "service_worker": "background/auth.js"
+      "service_worker": "background/background.js"
     }
   }
   
