--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "identity",
     "storage",
     "activeTab",
-    "alarms"
+    "alarms",
+    "offscreen"
   ],
   "host_permissions": [
     "https://rest.tsheets.com/api/*"
@@ -18,6 +19,20 @@
   "background": {
     "service_worker": "background/background.js"
   },
+  "offscreen": {
+    "page": "offscreen.html",
+    "reason": "audio-playback"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "sounds/*.mp3"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ],
   "env": {
     "CLIENT_ID": "c68135e240a7e3c9e314171a1acec86e"
   }
