--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "storage",
     "activeTab",
     "alarms",
-    "offscreen"
+    "offscreen",
+    "notifications"
   ],
   "host_permissions": [
     "https://rest.tsheets.com/api/*"
