--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "quickbooks_time_tracker_chrome_extension",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "",
   "main": "offscreen.js",
   "scripts": {
     "build": "tailwindcss -i ./src/input.css -o ./popup/styles.css --watch",
     "build:prod": "tailwindcss -i ./src/input.css -o ./popup/styles.css --minify",
+    "sync-version": "node scripts/sync-version.js",
+    "prepackage": "npm run sync-version",
     "package": "npm run build:prod && rm -rf dist && mkdir dist && cp -r manifest.json background images popup shared sounds src offscreen.html offscreen.js dist/ && VERSION=$(node -p \"require('./package.json').version\") && cd dist && zip -r ../hourglass_chrome_extension_v$VERSION.zip ."
   },
   "keywords": [],
